# AutoATES-v2.0

./: .gitignore  OPTIMIZATION_GUIDE.md  main.py  pra.bat  pyproject.toml
FlowPy_detrainment/: main.py
PRA/: Classify_Canopy_As_Bool.py  PRA_AutoATES-v2.0.py  PRA_Buhler_2018.py  PRA_Buhler_OBIA.py  PRA_binary.tif  PRA_continous.tif  README_OBIA_Algorithm.md  log.txt  windshelter_1m.tif.aux.xml
PRA/Inputs/: AP_Canopy_5m.tfw  AP_Canopy_5m.tif  AP_Canopy_5m.tif.aux.xml  AP_Canopy_5m.tif.vat.dbf  AP_Canopy_5m.tif.xml  AP_Canopy_Bool_5m.tif.aux.xml  AP_Canopy_Bool_5m.tif.xml  AP_DEM_Clip_5m.tfw  AP_DEM_Clip_5m.tif.aux.xml  AP_DEM_Clip_5m.tif.xml
PRA/__pycache__/: PRA_Buhler_OBIA._ruggedness_loop_numba-1070.py312.1.nbc  PRA_Buhler_OBIA._ruggedness_loop_numba-1070.py312.nbi  PRA_Buhler_OBIA._ruggedness_loop_numba-876.py312.1.nbc  PRA_Buhler_OBIA._ruggedness_loop_numba-876.py312.nbi  PRA_Buhler_OBIA._ruggedness_loop_numba-909.py312.1.nbc  PRA_Buhler_OBIA._ruggedness_loop_numba-909.py312.nbi
app/: streamlit_app.py
engine/ATES/FlowPy/: main.py
engine/ATES/PRA/: PRA_Buhler_OBIA.py  README_OBIA_Algorithm.md
engine/ATES/PRA/__pycache__/: PRA_Buhler_OBIA._ruggedness_loop_numba-1159.py312.1.nbc  PRA_Buhler_OBIA._ruggedness_loop_numba-1159.py312.nbi  PRA_Buhler_OBIA._ruggedness_loop_numba-975.py312.1.nbc  PRA_Buhler_OBIA._ruggedness_loop_numba-975.py312.nbi
log/: OBIA_processing_log.txt
test-data/Bow Summit/: dem.tif.aux.xml
