[project]
name = "autoates-v2-0"
version = "0.1.0"
description = "An automated ATES classification system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda13x>=13.6.0",
    "gdal",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pipwin>=0.5.2",
    "psutil>=7.1.3",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "streamlit>=1.54.0",
]

[tool.uv.sources]
gdal = { path = "GDAL-3.9.2-cp312-cp312-win_amd64.whl" }
